--- a/pur_beurre/css/my_styles.css
+++ b/pur_beurre/css/my_styles.css
@@ -132,3 +132,18 @@ h1, h2, h3, h4, h5, h6,
   font-weight: 600;
   text-transform: uppercase;
 }
+
+.fa-user{
+  color:#212529;
+  font-size: 1.5rem;
+}
+
+.fa-sign-out-alt{
+  color:#212529;
+  font-size: 1.5rem;
+}
+
+.fa-carrot{
+  color:#212529;
+  font-size: 1.5rem;
+}
