--- a/pur_beurre/css/my_styles.css
+++ b/pur_beurre/css/my_styles.css
@@ -147,3 +147,13 @@ h1, h2, h3, h4, h5, h6,
   color:#212529;
   font-size: 1.5rem;
 }
+
+.fa-phone{
+  color:#212529;
+  font-size: 2.5rem;
+}
+
+.fa-envelope{
+  color:#212529;
+  font-size: 2.5rem;
+}
