--- a/pur_beurre/css/my_styles.css
+++ b/pur_beurre/css/my_styles.css
@@ -118,6 +118,7 @@ h1, h2, h3, h4, h5, h6,
   font-weight: 700;
   color: #212529;
 }
+
 #mainNav .navbar-nav .nav-item .nav-link {
   color: #6c757d;
   font-family: "Open Sans", sans-serif, Arial, ;
@@ -156,4 +157,42 @@ h1, h2, h3, h4, h5, h6,
 .fa-envelope{
   color:#212529;
   font-size: 2.5rem;
+}
+
+
+header.searchhead {
+  padding-top: 10rem;
+  padding-bottom: calc(10rem - 4.5rem);
+  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/bg-masthead.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
+}
+header.searchhead h1 {
+  font-size: 2.25rem;
+}
+@media (min-width: 992px) {
+  header.searchhead {
+    height: 25vh;
+    min-height: 20rem;
+    padding-top: 4.5rem;
+    padding-bottom: 0;
+  }
+  header.searchhead p {
+    font-size: 1.15rem;
+  }
+  header.searchhead h1 {
+    font-size: 3rem;
+  }
+}
+@media (min-width: 1200px) {
+  header.searchhead h1 {
+    font-size: 3.5rem;
+  }
+}
+
+.fa-save{
+  color:#212529;
+  font-size: 1rem;
 }
