--- a/pur_beurre/css/my_styles.css
+++ b/pur_beurre/css/my_styles.css
@@ -225,3 +225,10 @@ header.searchhead h1 {
   -ms-transform: translate(-50%,-50%);
 }
 
+.list-group-item {
+  position: relative;
+  display: block;
+  padding: 0.75rem 1.25rem;
+  background-color: #fff;
+  border: 0px solid rgba(0, 0, 0, 0.125);
+}
