--- a/pur_beurre/css/my_styles.css
+++ b/pur_beurre/css/my_styles.css
@@ -113,10 +113,16 @@ h1, h2, h3, h4, h5, h6,
   font-family: "Open Sans", sans-serif, Arial;
 }
 
+#mainNav {
+  box-shadow: 0 0.5rem 1rem rgba( 52, 90, 97, 0.15);
+  background-color: #e8a75d;
+  transition: background-color 0.2s ease;
+}
+
 #mainNav .navbar-brand {
   font-family: "Open Sans", sans-serif, Arial;
   font-weight: 700;
-  color: #212529;
+  color: #345a61;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
@@ -155,7 +161,6 @@ h1, h2, h3, h4, h5, h6,
   color:#345a61;
   font-size: 2.5rem;
 }
-
 
 header.searchhead {
   padding-top: 10rem;
@@ -231,7 +236,7 @@ header.searchhead h1 {
 }
 
 .bg-primary {
-  background-color: #de9440 !important;
+  background-color: #c45525 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -286,8 +291,8 @@ hr.divider {
   border-color: #de9440;
 }
 
-.navbar-light .navbar-brand .fa-user {
-  color: rgba(52, 90, 97 , 0.9);
+.navbar-light .navbar-brand {
+  color: rgba(52, 90, 97 , 1);
 }
 .navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
   color: rgba(52, 90, 97 , 0.9); 
@@ -302,15 +307,7 @@ hr.divider {
   color: rgba(52, 90, 97 , 0.3);
 }
 
-#mainNav {
-  box-shadow: 0 0.5rem 1rem rgba( 52, 90, 97, 0.15);
-  background-color: #fff;
-  transition: background-color 0.2s ease;
-}
-#mainNav .navbar-brand {
-  font-family: "Open Sans", sans-serif, Arial;
-  font-weight: 700;
-  color: #345a61;
+
 }
 #mainNav .navbar-nav .nav-item .nav-link {
   color: #6c757d;
@@ -321,6 +318,7 @@ hr.divider {
 }
 #mainNav .navbar-nav .nav-item .nav-link:hover, #mainNav .navbar-nav .nav-item .nav-link:active {
   color: #c45525;
+
 }
 #mainNav .navbar-nav .nav-item .nav-link.active {
   color: #c45525 !important;
@@ -331,38 +329,38 @@ hr.divider {
     background-color: transparent;
   }
   #mainNav .navbar-brand {
-    color: rgba(255, 255, 255, 0.7); */
+    color: rgba(232, 167, 93, 0.7);
   }
   /* New element-- */
   #mainNav .fa-user {
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba( 232, 167, 93 , 0.7);
   }
   /* New element-- */
   #mainNav .fa-sign-out-alt{
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba( 232, 167, 93 , 0.7);
   }
   /* New element-- */
   #mainNav .fa-carrot {
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba( 232, 167, 93 , 0.7);
   }
   /* --New element  */
 
   #mainNav .navbar-brand:hover {
-    color: #fff;
+    color: #e8a75d;
   }
   #mainNav .navbar-nav .nav-item .nav-link {
     color: rgba(255, 255, 255, 0.7);
     padding: 0 1rem;
   }
   #mainNav .navbar-nav .nav-item .nav-link:hover {
-    color: #fff;
+    color: #e8a75d;
   }
   #mainNav .navbar-nav .nav-item:last-child .nav-link {
     padding-right: 0;
   }
   #mainNav.navbar-scrolled {
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-    background-color: #fff;
+    background-color: #e8a75d;
   }
   #mainNav.navbar-scrolled .navbar-brand {
     color: #345a61;
@@ -389,4 +387,61 @@ hr.divider {
   #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link:hover {
     color: #c45525;
   }
+}
+
+.text-white {
+  color: #e8a75d !important;
+}
+
+.text-white-50 {
+  color: rgba(232, 167, 93 , 0.5) !important;
+}
+
+.text-white-75 {
+  color: rgba(232, 167, 93 , 0.75);
+}
+
+.text-dark {
+  color: #345a61 !important;
+}
+
+a.text-dark:hover, a.text-dark:focus {
+  color: #121416 !important;
+}
+
+/* new element */
+.text-dark-50 {
+  color: rgba(52, 90, 97  , 0.5) !important;
+}
+
+/* new element */
+.text-dark-75 {
+  color: rgba(52, 90, 97  , 0.75);
+}
+
+.bg-white {
+  background-color: #e8a75d !important;
+}
+
+.footer-text {
+  color: #86ebe6;
+}
+
+a {
+  color: #345a61;
+  text-decoration: none;
+  background-color: transparent;
+}
+a:hover {
+  color: #86ebe6;
+  text-decoration: underline;
+}
+
+a:not([href]):not([class]) {
+  color: inherit;
+  text-decoration: none;
+}
+a:not([href]):not([class]):hover {
+  color: inherit;
+  text-decoration: none;
 }
