--- a/pur_beurre/css/my_styles.css
+++ b/pur_beurre/css/my_styles.css
@@ -332,7 +332,7 @@ hr.divider {
     color: rgba(232, 167, 93, 0.7);
   }
   /* New element-- */
-  #mainNav .fa-user {
+  #mainNav .fa-user{
     color: rgba( 232, 167, 93 , 0.7);
   }
   /* New element-- */
@@ -424,17 +424,18 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .footer-text {
-  color: #86ebe6;
+  color: #e8a75d;
 }
 
 a {
-  color: #345a61;
+  color: none;
   text-decoration: none;
   background-color: transparent;
 }
-a:hover {
+
+a.footer-text:hover {
   color: #86ebe6;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 a:not([href]):not([class]) {
@@ -444,4 +445,8 @@ a:not([href]):not([class]) {
 a:not([href]):not([class]):hover {
   color: inherit;
   text-decoration: none;
+}
+
+a #user_icon:hover{
+  color:#86ebe6
 }
