--- a/pur_beurre_project/supersub/templates/supersub/index.html
+++ b/pur_beurre_project/supersub/templates/supersub/index.html
@@ -6,8 +6,10 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>P8 - Pur-beurre</title>
+        {% load static %}
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/img/logo_pur_beurre-favicon.ico" />
+        <!-- <link rel="icon" type="image/x-icon" href="assets/img/logo_pur_beurre-favicon.ico" /> -->
+        <link rel="icon" type="image/x-icon" href="{% static 'supersub/assets/img/logo_pur_beurre-favicon.ico' %}" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -16,14 +18,14 @@
         <!-- Third party plugin CSS-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-        <link href="css/my_styles.css" rel="stylesheet" />
+        <link href="{% static 'supersub/css/styles.css' %}" rel="stylesheet" />
+        <link href="{% static 'supersub/css/my_styles.css' %}" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container">
-                <img src="assets/img/logo_pur_beurre.png" width="40" height="30" alt="Pur beurre logo">
+                <img src="{% static 'supersub/assets/img/logo_pur_beurre.png' %}" width="40" height="30" alt="Pur beurre logo">
                 <a class="navbar-brand js-scroll-trigger pl-2" href="#page-top">Pur Beurre</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -90,10 +92,10 @@
                         certainement rencontrés dans notre excellent restaurant Ratatouille</p>
                             <div class="row">
                                 <div class="col-sm-6 align-self-center">
-                                        <img src="assets/img/colette.png" width="150" alt="colette">
+                                        <img src="{% static 'supersub/assets/img/colette.png' %}" width="150" alt="colette">
                                 </div>
                                 <div class="col-sm-6 align-self-center">
-                                    <img src="assets/img/remy.png" width="150" alt="remy">
+                                    <img src="{% static 'supersub/assets/img/remy.png' %}" width="150" alt="remy">
                                 </div>
                             </div>
                         </div>
