--- a/pur_beurre_project/supersub/templates/supersub/base.html
+++ b/pur_beurre_project/supersub/templates/supersub/base.html
@@ -27,7 +27,7 @@
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container">
                 <img src="{% static 'supersub/assets/img/logo_pur_beurre.png' %}" width="40" height="30" alt="Pur beurre logo">
-                <a class="navbar-brand js-scroll-trigger pl-2" href="#page-top">Pur Beurre</a>
+                <a class="navbar-brand js-scroll-trigger pl-2" href="{% url 'supersub:index'%}">Pur Beurre</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto my-2 my-lg-0 align-items-center">
@@ -36,17 +36,17 @@
                                 aria-label="Search" required>
                         </form>
                         <li class="nav-item nav-link js-scroll-trigger navbar-brand">
-                            <a href="#services">
+                            <a href="{% url 'supersub:login'%}">
                                 <i class="fas fa-user" id="user_icon"></i>
                             </a>
                         </li>
                         <li class="nav-item nav-link js-scroll-trigger navbar-brand">
-                            <a href="#portfolio">
+                            <a href="{% url 'supersub:registered_aliments'%}">
                                 <i class="fas fa-carrot" data-fa-transform="rotate-315"></i>
                             </a>
                         </li>
                         <li class="nav-item nav-link js-scroll-trigger navbar-brand">
-                            <a href="#contact">
+                            <a href="{% url 'supersub:index'%}">
                                 <i class="fas fa-sign-out-alt"></i>
                             </a>
                         </li>
@@ -66,7 +66,7 @@
                     <div class="col-lg-8 text-center">
                         <div class="row">
                             <div class="col-sm-6 align-self-center text-muted"><a href="#mention_legales" class="footer-text">Mention légales</a></div>
-                            <div class="col-sm-6 align-self-center text-muted"><a href="#contact" class="footer-text">Contact</a></div>
+                            <div class="col-sm-6 align-self-center text-muted"><a href="{% url 'supersub:index'%}#contact" class="footer-text">Contact</a></div>
                         </div>
                     </div>
                 </div>
