--- a/pur_beurre_project/supersub/templates/supersub/index.html
+++ b/pur_beurre_project/supersub/templates/supersub/index.html
@@ -15,7 +15,7 @@
                         consommez tous les jours!</h2>
                 </div>
                 <div class="col-10 col-md-8 col-lg-5  align-self-start">
-                    <form action="index.html" method="post" novalidate>
+                    <form action="" method="post" novalidate>
                         <div class="form-group align-content-end">
                             <div class="row">
                                 <div class="col-8">
