--- a/pur_beurre_project/supersub/templates/supersub/base.html
+++ b/pur_beurre_project/supersub/templates/supersub/base.html
@@ -36,7 +36,7 @@
                                 aria-label="Search" required>
                         </form>
                         <li class="nav-item nav-link js-scroll-trigger navbar-brand">
-                            <a href="{% url 'supersub:login'%}">
+                            <a href="{% url 'authentification:login'%}">
                                 <i class="fas fa-user" id="user_icon"></i>
                             </a>
                         </li>
