databse deleted, migration file delete, database recreated

--- a/pur_beurre_project/supersub/static/supersub/css/my_styles.css
+++ b/pur_beurre_project/supersub/static/supersub/css/my_styles.css
@@ -4,6 +4,7 @@
   
 }
 
+
 /* Merriweather Sans => Open Sans */
 /* Merriweather => Scope One */
 
@@ -583,3 +584,7 @@ a:not([href]):not([class]):hover {
 } */
 
 /* aliment from aliment list in rsult page*/
+
+.min-vh-75 {
+  min-height: 75vh !important;
+}
