working on results view

--- a/pur_beurre_project/supersub/templates/supersub/index.html
+++ b/pur_beurre_project/supersub/templates/supersub/index.html
@@ -20,7 +20,7 @@
                         <div class="form-group align-content-end">
                             <div class="row">
                                 <div class="col-8">
-                                    <input type="text" name ="product_id" id="question" class="form-control text-dark" required>
+                                    <input type="text" name ="product" id="product" class="form-control text-dark" required>
                                 </div>
                                 <div class="col-4">
                                     <input type="submit" id="ask_button" class="btn btn-primary" value="Chercher">
