--- a/pur_beurre_project/supersub/templates/supersub/test_results.html
+++ b/pur_beurre_project/supersub/templates/supersub/test_results.html
@@ -1,3 +1,4 @@
+{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 {% if name %}
     <p>{{ name }}</p>
     <img src='{{ image }}'>
