--- a/pur_beurre_project/supersub/templates/supersub/test_results.html
+++ b/pur_beurre_project/supersub/templates/supersub/test_results.html
@@ -3,7 +3,9 @@
     <p>{{ name }}</p>
     <img src='{{ image }}'>
     <!-- <p>{{ products_in_categories }}</p> -->
+    <ul>
     {% for product in products_in_categories %}
-        <p>{{ product.name }}</p>
+        <li>{{ product.name }}</li>
     {% endfor %}
+    </ul>
 {% endif %}
