--- a/pur_beurre_project/supersub/static/supersub/css/my_styles.css
+++ b/pur_beurre_project/supersub/static/supersub/css/my_styles.css
@@ -265,12 +265,13 @@ h1, h2, h3, h4, h5, h6,
 header.searchhead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/bg-masthead.jpg");
+  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%);
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
 }
+
 header.searchhead h1 {
   font-size: 2.25rem;
 }
