--- a/pur_beurre_project/supersub/templates/supersub/results.html
+++ b/pur_beurre_project/supersub/templates/supersub/results.html
@@ -1,163 +1,172 @@
 {% extends 'supersub/base.html' %}
 
 {% block content %}
+    {% if name %}
 
-    {% load static %}
+        {% load static %}
 
-    <!-- Masthead-->
-    <header class="searchhead" id="searched">
-        <div class="container h-100">
-            <div class="row h-100 align-items-center justify-content-center text-center"> 
-                <div class="col-lg-8 align-self-center mb-2">
-                    <h2 class="text-white-75 mb-4">[ Aliment cherché ]</h2>
-                </div>
-            </div>
-        </div>
-    </header>
-    <!-- Services-->
-    <section class="page-section bg-white" id="services">
-        <div class="container">
-            <h4 class="text-dark text-center text-secondary-50 mb-4"> Vous pouvez remplacer cet aliment par:  </h4>
-            <hr class="divider my-4" />
-            <div class="row">
-                <div class="col-lg-4 col-sm-6 text-center">
-                    <div class="m-4 results-image">
-                        <a href="" class="ele_dark_href">
-                            <img class="img-fluid" src="{% static 'supersub/assets/img/portfolio/thumbnails/1.jpg' %}" alt="" />
-                            <p class=" h4 m-1"> aliment 1</p>
-                        </a>
-                        <div class="nutriscore-circle">
-                            <i class="fas fa-circle"></i>
-                        </div>
-                        <div class="nutriscore-letter">
-                            <p>A</p>
-                        </div>
-                        <a href="" class="ele_dark_href">
-                            <p class="mb-0">
-                                <span>
-                                    <i class="fas fa-save"></i>
-                                </span>
-                                Sauvegarder
-                            </p>
-                        </a>
-
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6 text-center">
-                    <div class="m-4 results-image">
-                        <a href="" class="ele_dark_href">
-                            <img class="img-fluid" src="{% static 'supersub/assets/img/portfolio/thumbnails/1.jpg' %}" alt="" />
-                            <p class="h4 m-1"> aliment 2</p>
-                        </a>
-                        <div class="nutriscore-circle">
-                            <i class="fas fa-circle"></i>
-                        </div>
-                        <div class="nutriscore-letter">
-                            <p>A</p>
-                        </div>
-                        <a href="" class="ele_dark_href">
-                            <p class="mb-0" href=>
-                                <span>
-                                    <i class="fas fa-save"></i>
-                                </span>
-                                Sauvegarder
-                            </p>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6 text-center">
-                    <div class="m-4 results-image">
-                        <a href="" class="ele_dark_href">
-                            <img class="img-fluid" src="{% static 'supersub/assets/img/portfolio/thumbnails/1.jpg' %}" alt="" />
-                            <p class="h4 m-1"> aliment 3</p>
-                        </a>
-                        <div class="nutriscore-circle">
-                            <i class="fas fa-circle"></i>
-                        </div>
-                        <div class="nutriscore-letter">
-                            <p>A</p>
-                        </div>
-                        <a href="" class="ele_dark_href">
-                            <p class="mb-0" href=>
-                                <span>
-                                    <i class="fas fa-save"></i>
-                                </span>
-                                Sauvegarder
-                            </p>
-                        </a>
-                
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6 text-center">
-                    <div class="m-4 results-image">
-                        <a href="" class="ele_dark_href">
-                            <img class="img-fluid" src="{% static 'supersub/assets/img/portfolio/thumbnails/1.jpg' %}" alt="" />
-                            <p class="h4 m-1"> aliment 4</p>
-                        </a>
-                        <div class="nutriscore-circle">
-                            <i class="fas fa-circle"></i>
-                        </div>
-                        <div class="nutriscore-letter">
-                            <p>A</p>
-                        </div>
-                        <a href="" class="ele_dark_href">
-                            <p class="mb-0" href=>
-                                <span>
-                                    <i class="fas fa-save"></i>
-                                </span>
-                                Sauvegarder
-                            </p>
-                        </a>                    
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6 text-center">
-                    <div class="m-4 results-image">
-                        <a href="" class="ele_dark_href">
-                            <img class="img-fluid" src="{% static 'supersub/assets/img/portfolio/thumbnails/1.jpg' %}" alt="" />
-                            <p class="h4 m-1"> aliment 5</p>
-                        </a>
-                        <div class="nutriscore-circle">
-                            <i class="fas fa-circle"></i>
-                        </div>
-                        <div class="nutriscore-letter">
-                            <p>A</p>
-                        </div>
-                        <a href="" class="ele_dark_href">
-                            <p class="mb-0" href=>
-                                <span>
-                                    <i class="fas fa-save"></i>
-                                </span>
-                                Sauvegarder
-                            </p>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6 text-center">
-                    <div class="m-4 results-image">
-                        <a href="" class="ele_dark_href">
-                            <img class="img-fluid" src="{% static 'supersub/assets/img/portfolio/thumbnails/1.jpg' %}" alt="" />
-                            <p class="h4 m-1"> aliment 6</p>
-                        </a>
-                        <div class="nutriscore-circle">
-                            <i class="fas fa-circle"></i>
-                        </div>
-                        <div class="nutriscore-letter">
-                            <p>A</p>
-                        </div>
-                        <a href="" class="ele_dark_href">
-                            <p class="mb-0" href=>
-                                <span>
-                                    <i class="fas fa-save"></i>
-                                </span>
-                                Sauvegarder
-                            </p>
-                        </a>
-                
+        <!-- Masthead-->
+        <header style="
+            padding-top: 10rem;
+            padding-bottom: calc(10rem - 4.5rem);
+            background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%),url('{{image}}');
+            background-position: center;
+            background-attachment: scroll;
+            background-size: contain;
+            class="searchhead" id="searchhead">
+            <div class="container h-100">
+                <div class="row h-100 align-items-center justify-content-center text-center"> 
+                    <div class="col-lg-8 align-self-center mb-2">
+                        <h2 class="text-white-75 mb-4">[ {{ name }} ]</h2> 
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </header>
+        <!-- Services-->
+        <section class="page-section bg-white" id="services">
+            <div class="container">
+                <h4 class="text-dark text-center text-secondary-50 mb-4"> Vous pouvez remplacer cet aliment par:  </h4>
+                <hr class="divider my-4" />
+                <div class="row">
+                    <div class="col-lg-4 col-sm-6 text-center">
+                        <div class="m-4 results-image">
+                            <a href="" class="ele_dark_href">
+                                <img class="img-fluid" src="{% static 'supersub/assets/img/portfolio/thumbnails/1.jpg' %}" alt="" />
+                                <p class=" h4 m-1"> aliment 1</p>
+                            </a>
+                            <div class="nutriscore-circle">
+                                <i class="fas fa-circle"></i>
+                            </div>
+                            <div class="nutriscore-letter">
+                                <p>A</p>
+                            </div>
+                            <a href="" class="ele_dark_href">
+                                <p class="mb-0">
+                                    <span>
+                                        <i class="fas fa-save"></i>
+                                    </span>
+                                    Sauvegarder
+                                </p>
+                            </a>
+
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 text-center">
+                        <div class="m-4 results-image">
+                            <a href="" class="ele_dark_href">
+                                <img class="img-fluid" src="{% static 'supersub/assets/img/portfolio/thumbnails/1.jpg' %}" alt="" />
+                                <p class="h4 m-1"> aliment 2</p>
+                            </a>
+                            <div class="nutriscore-circle">
+                                <i class="fas fa-circle"></i>
+                            </div>
+                            <div class="nutriscore-letter">
+                                <p>A</p>
+                            </div>
+                            <a href="" class="ele_dark_href">
+                                <p class="mb-0" href=>
+                                    <span>
+                                        <i class="fas fa-save"></i>
+                                    </span>
+                                    Sauvegarder
+                                </p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 text-center">
+                        <div class="m-4 results-image">
+                            <a href="" class="ele_dark_href">
+                                <img class="img-fluid" src="{% static 'supersub/assets/img/portfolio/thumbnails/1.jpg' %}" alt="" />
+                                <p class="h4 m-1"> aliment 3</p>
+                            </a>
+                            <div class="nutriscore-circle">
+                                <i class="fas fa-circle"></i>
+                            </div>
+                            <div class="nutriscore-letter">
+                                <p>A</p>
+                            </div>
+                            <a href="" class="ele_dark_href">
+                                <p class="mb-0" href=>
+                                    <span>
+                                        <i class="fas fa-save"></i>
+                                    </span>
+                                    Sauvegarder
+                                </p>
+                            </a>
+                    
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 text-center">
+                        <div class="m-4 results-image">
+                            <a href="" class="ele_dark_href">
+                                <img class="img-fluid" src="{% static 'supersub/assets/img/portfolio/thumbnails/1.jpg' %}" alt="" />
+                                <p class="h4 m-1"> aliment 4</p>
+                            </a>
+                            <div class="nutriscore-circle">
+                                <i class="fas fa-circle"></i>
+                            </div>
+                            <div class="nutriscore-letter">
+                                <p>A</p>
+                            </div>
+                            <a href="" class="ele_dark_href">
+                                <p class="mb-0" href=>
+                                    <span>
+                                        <i class="fas fa-save"></i>
+                                    </span>
+                                    Sauvegarder
+                                </p>
+                            </a>                    
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 text-center">
+                        <div class="m-4 results-image">
+                            <a href="" class="ele_dark_href">
+                                <img class="img-fluid" src="{% static 'supersub/assets/img/portfolio/thumbnails/1.jpg' %}" alt="" />
+                                <p class="h4 m-1"> aliment 5</p>
+                            </a>
+                            <div class="nutriscore-circle">
+                                <i class="fas fa-circle"></i>
+                            </div>
+                            <div class="nutriscore-letter">
+                                <p>A</p>
+                            </div>
+                            <a href="" class="ele_dark_href">
+                                <p class="mb-0" href=>
+                                    <span>
+                                        <i class="fas fa-save"></i>
+                                    </span>
+                                    Sauvegarder
+                                </p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 text-center">
+                        <div class="m-4 results-image">
+                            <a href="" class="ele_dark_href">
+                                <img class="img-fluid" src="{% static 'supersub/assets/img/portfolio/thumbnails/1.jpg' %}" alt="" />
+                                <p class="h4 m-1"> aliment 6</p>
+                            </a>
+                            <div class="nutriscore-circle">
+                                <i class="fas fa-circle"></i>
+                            </div>
+                            <div class="nutriscore-letter">
+                                <p>A</p>
+                            </div>
+                            <a href="" class="ele_dark_href">
+                                <p class="mb-0" href=>
+                                    <span>
+                                        <i class="fas fa-save"></i>
+                                    </span>
+                                    Sauvegarder
+                                </p>
+                            </a>
+                    
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    {% endif %}
 
 {% endblock %}
 
