aliment view start to be functionnal

--- a/pur_beurre_project/supersub/templates/supersub/results.html
+++ b/pur_beurre_project/supersub/templates/supersub/results.html
@@ -35,7 +35,7 @@
                     {% for product in products_in_categories %}
                         <div class="col-lg-4 col-sm-6 text-center">
                             <div class="m-4 results-image">
-                                <a href="" class="ele_dark_href">
+                                <a href="{% url 'supersub:aliment' id_product=product.id %}" class="ele_dark_href">
                                     <img style="max-height: 80px;"  src=" {{ product.image }} " alt="" />
                                     <p class="h4 m-1"> {{ product.name }} </p>
                                 </a>
