--- a/pur_beurre_project/supersub/templates/supersub/aliment.html
+++ b/pur_beurre_project/supersub/templates/supersub/aliment.html
@@ -6,7 +6,7 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center justify-content-center text-center"> 
                 <div class="col-lg-8 align-self-center mb-2">
-                    <h2 class="text-white-75 mb-4">[ Nom aliment ]</h2>
+                    <h2 class="text-white-75 mb-4">[ {{ name }} ]</h2>
                 </div>
             </div>
         </div>
