updating create accout page

--- a/pur_beurre_project/supersub/templates/supersub/aliment.html
+++ b/pur_beurre_project/supersub/templates/supersub/aliment.html
@@ -46,7 +46,7 @@
             <div class="row">
                 <div class="col pt-5 text-center">
                     <a href='{{ url }}'>
-                        <button type="button" id="off_aliment" class="btn btn-primary" value="Voir la fiche d'OpenFoodFacts">Voir la fiche d'OpenFoodFacts</button>
+                        <button type="button" id="off_aliment" class="btn btn-primary">Voir la fiche d'OpenFoodFacts</button>
                     </a>
                 </div>
             </div>
