--- a/pur_beurre_project/authentification/templates/authentification/create_account.html
+++ b/pur_beurre_project/authentification/templates/authentification/create_account.html
@@ -6,7 +6,7 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center justify-content-center text-center">
                 <div class="col-lg-8 align-self-center mb-2">
-                    <h2 class="text-white-75 mb-4"> {{ message }} </h2>
+                    <h2 class="text-white-75 mb-4"> Connection - Créer un compte </h2>
                 </div>
             </div>
         </div>
@@ -20,14 +20,21 @@
                         <div class="row justify-content-center">
                             <div class="col-8 pl-2">
                                 <label for="email" class="text-dark">Email</label>
-                                <input type="email" id="email" class="form-control" value="email@email.com" required>
+                                <input type="email" id="email" class="form-control" value="" required>
                             </div>
                             <div class="col-8 pl-2 pt-4">
                                 <label for="pwd" class="text-dark">Mot de passe</label>
-                                <input type="password" id="password" class="form-control text-dark" value="********" required>
+                                <input type="password" id="user_password" class="form-control text-dark" value="" required>
                             </div>
                             <div class="col-8 pl-2 pt-4">
-                                <button type="submit" id="create_account_button" class="text-right btn btn-primary">{{ button_message }}</button>
+                                <div class="row text-center">
+                                    <div class="col-6 ">
+                                        <button type="submit" id="create_account_button" class=" btn btn-primary">Se connecter</button>
+                                    </div>
+                                    <div class="col-6">
+                                        <button type="submit" id="create_account_button" class=" btn btn-primary">Créer un compte</button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
