--- a/pur_beurre_project/supersub/static/supersub/css/my_styles.css
+++ b/pur_beurre_project/supersub/static/supersub/css/my_styles.css
@@ -263,9 +263,10 @@ h1, h2, h3, h4, h5, h6,
 }
 
 header.searchhead {
+  height: 40vh;
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%);
+  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%),url("../assets/img/bg-masthead.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -277,7 +278,7 @@ header.searchhead h1 {
 }
 @media (min-width: 992px) {
   header.searchhead {
-    height: 25vh;
+    height: 40vh;
     min-height: 20rem;
     padding-top: 4.5rem;
     padding-bottom: 0;
@@ -588,3 +589,5 @@ a:not([href]):not([class]):hover {
 .min-vh-75 {
   min-height: 75vh !important;
 }
+
+
